added hero movement in forntend and minor fixes to backend

--- a/frontend/src/components/gamePageElements/Card.css
+++ b/frontend/src/components/gamePageElements/Card.css
@@ -3,7 +3,7 @@
 
 .card-comp {
     aspect-ratio: 746/1039;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
     border-radius: 3%;
 }
