--- a/frontend/src/components/gamePageElements/CardHero.css
+++ b/frontend/src/components/gamePageElements/CardHero.css
@@ -66,3 +66,11 @@
     /* scale: 1.05; */
     z-index: 30;
 }
+
+.hero-hp-damaged {
+    color: rgb(77, 9, 9);
+}
+
+.hero-hp-buffed {
+    color: rgb(67, 219, 67);
+}
