--- a/frontend/src/components/gamePageElements/PlayerDungeon.css
+++ b/frontend/src/components/gamePageElements/PlayerDungeon.css
@@ -125,3 +125,43 @@
     right: 90px;
     z-index: 1;
 }
+
+.single-player-dungeon-wrapper {
+    position: relative;
+}
+
+.clicked-dung-wrapper {
+    position: absolute;
+    z-index: 12;
+    display: flex;
+    right: -80%;
+
+}
+
+.built-dung {
+    cursor: pointer;
+    top: 0%;
+    transition-duration: 0.2s;
+}
+
+.clicked-dung-wrapper+.built-dung {
+    top: 10%;
+    /* transition-duration: 0.3s; */
+    z-index: 11;
+    scale: 1.2;
+    box-shadow: 0px 0px 10px 1px rgb(162, 162, 162);
+}
+
+.destroy-dung-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 25px;
+    border: none;
+    border-radius: 999px;
+    background-color: brown;
+    gap: 5px;
+    color: whitesmoke;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 1px rgba(16, 16, 16, 1);
+}
