--- a/frontend/src/components/gamePageElements/CardDungeon.css
+++ b/frontend/src/components/gamePageElements/CardDungeon.css
@@ -28,3 +28,20 @@
     text-align: center;
     white-space: nowrap;
 }
+
+.dung-card-desc {
+    aspect-ratio: unset;
+    /* bottom: 15%; */
+    height: fit-content;
+    width: fit-content;
+    color: whitesmoke;
+    /* font-family: 'Lora', serif; */
+    z-index: 3;
+    top: 67%;
+    font-size: 0.8em;
+    left: 50%;
+    transform: translateX(-50%);
+    aspect-ratio: unset;
+    text-align: center;
+    width: 60%;
+}
