--- a/frontend/src/components/gamePageElements/CardSpell.css
+++ b/frontend/src/components/gamePageElements/CardSpell.css
@@ -1,8 +1,10 @@
 .spell-card-name {
     top: 14.6%;
-    left: 50%;
+    left: 48.5%;
     transform: translateX(-50%);
     color: rgb(27, 27, 27);
+    width: 65%;
+    text-align: center;
 }
 
 .spell-card-desc {
@@ -12,7 +14,7 @@
     color: rgb(27, 27, 27);
     /* font-family: 'Lora', serif; */
     z-index: 3;
-    top: 69%;
+    top: 68.4%;
     font-size: 0.8em;
     left: 50%;
     transform: translateX(-50%);
