--- a/frontend/src/components/gamePageElements/PlayerDungeon.css
+++ b/frontend/src/components/gamePageElements/PlayerDungeon.css
@@ -132,7 +132,7 @@
 
 .clicked-dung-wrapper {
     position: absolute;
-    z-index: 12;
+    z-index: 9;
     display: flex;
     right: -80%;
 
@@ -164,4 +164,32 @@
     color: whitesmoke;
     font-weight: 600;
     box-shadow: 0px 0px 10px 1px rgba(16, 16, 16, 1);
+}
+
+.use-dung-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 25px;
+    border: none;
+    border-radius: 999px;
+    background-color: rgb(42, 155, 165);
+    gap: 5px;
+    color: whitesmoke;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 1px rgba(16, 16, 16, 1);
+    transition-duration: 0.2s;
+    cursor: pointer;
+}
+
+.use-dung-btn:hover {
+    background-color: rgb(54, 192, 204);
+}
+
+.clicked-dung-wrapper:nth-child(1) {
+    top: 0%;
+}
+
+.clicked-dung-wrapper:nth-child(2) {
+    top: 13%;
 }
