Added 'Skarbiec diabląt' dungeon card with its mechanic that allows to get card thrown away by other user, had to add new SelectionRequest class for selecting a value from predifned array of values.

--- a/frontend/src/components/gamePageElements/SelectionCompTreasure.css
+++ b/frontend/src/components/gamePageElements/SelectionCompTreasure.css
@@ -15,9 +15,12 @@
     gap: 80px;
     border-radius: 100px;
     border: 2px solid goldenrod;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .treasure-selection-header {
+    text-align: center;
     color: whitesmoke;
     font-family: 'Press Start 2P', cursive;
 }
