--- a/frontend/src/components/gamePageElements/PlayerDungeon.css
+++ b/frontend/src/components/gamePageElements/PlayerDungeon.css
@@ -144,12 +144,47 @@
     transition-duration: 0.2s;
 }
 
+.player-boss-wrapper {
+    position: relative;
+}
+
 .clicked-dung-wrapper+.built-dung {
     top: 10%;
     /* transition-duration: 0.3s; */
     z-index: 11;
     scale: 1.2;
     box-shadow: 0px 0px 10px 1px rgb(162, 162, 162);
+}
+
+.selected-boss-helper {
+    cursor: pointer;
+    top: 0%;
+    transition-duration: 0.2s;
+}
+
+.clicked-boss-wrapper+.selected-boss-helper {
+    top: 10%;
+    /* transition-duration: 0.3s; */
+    z-index: 11;
+    scale: 1.2;
+    box-shadow: 0px 0px 10px 1px rgb(162, 162, 162);
+}
+
+.clicked-dung-wrapper.clicked-boss-wrapper {
+    right: -80%;
+}
+
+.custom-action-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 17px;
+    gap: 5px;
+    color: whitesmoke;
+    font-weight: 600;
+    border-radius: 999px;
+    border: none;
+    background-color: rgb(130, 60, 222);
 }
 
 .destroy-dung-btn {
