--- a/frontend/src/components/gamePageElements/CardRequestedSelectionHandle.css
+++ b/frontend/src/components/gamePageElements/CardRequestedSelectionHandle.css
@@ -4,3 +4,28 @@
     width: 100%;
     height: 100%;
 }
+
+.selection-message {
+    position: fixed;
+    z-index: 100;
+    width: fit-content;
+    height: fit-content;
+    padding: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: olive;
+    font-size: 1rem;
+    font-family: 'Press Start 2P', cursive;
+
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    border: 2px solid olive;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 20px;
+
+    background-color: rgba(30, 30, 30, 1);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+}
