addex xyzax boss mechanic to draw 2 cards from used cards stack

--- a/frontend/src/components/gamePageElements/SelectionUnivesalComp.css
+++ b/frontend/src/components/gamePageElements/SelectionUnivesalComp.css
@@ -25,6 +25,8 @@
     display: flex;
     flex-wrap: wrap;
     overflow-y: scroll;
+    width: 100%;
+    flex-grow: 1;
 }
 
 .universal-selection-wrapper {
