fixed hover effects on frontend and improved look of UniversaSelection Component

--- a/frontend/src/components/gamePageElements/Card.css
+++ b/frontend/src/components/gamePageElements/Card.css
@@ -8,6 +8,10 @@
     border-radius: 3%;
 }
 
+.any-card-outer-wrapper:hover {
+    z-index: 10 !important;
+}
+
 .card-info-comp {
     position: absolute;
 }
