--- a/frontend/src/components/gamePageElements/SelectionUnivesalComp.css
+++ b/frontend/src/components/gamePageElements/SelectionUnivesalComp.css
@@ -24,29 +24,63 @@
 .universal-selection-choices-holder {
     display: flex;
     flex-wrap: wrap;
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
     flex-grow: 1;
+    padding-bottom: 1rem;
+}
+
+.universal-selection-choices-holder::-webkit-scrollbar {
+    width: 0.4rem;
+}
+
+.universal-selection-choices-holder::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    /* border-radius: 10px; */
+}
+
+.universal-selection-choices-holder::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgb(66, 66, 66);
 }
 
 .universal-selection-wrapper {
-    border-radius: 3rem;
+    position: fixed;
+    width: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 12;
+    background-color: rgb(44, 44, 44);
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    flex-direction: column;
+    gap: 40px;
+    border: 2px solid goldenrod;
+    padding: 20px;
+    box-sizing: border-box;
+
+
+    border-radius: 2rem;
     max-height: 70vh;
-    height: 100%;
+    height: fit-content;
     transition-duration: 0.3s;
 }
 
 .hidden-universal-selection {
     /* bottom: 1rem; */
     /* position: fixed; */
-    transform: translateY(55%) translateX(-50%);
+    transform: translateY(0) translateX(-50%);
+    transform: translateY(max(-150px, -25%)) translateX(-50%);
+    top: 100%;
 }
 
 .uni-selection-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .uni-header-icon {
