added backend url to images

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@ a {
 
 body {
   /* background-image: url('../../backend/public/images/bg/bg_scaled.png'); */
-  background-image: url('../../backend/src/public/images/bg/bg_scaled.png');
+  background-image: url('http://localhost:3001/images/bg/bg_scaled.png');
   /* background-size: cover; */
   /* background-size: contain; */
   /* background-repeat: repeat; */
